Moved the caption up farther to avoid collisions with dots on small screen sizes

--- a/website/static/website/css/styles.css
+++ b/website/static/website/css/styles.css
@@ -189,7 +189,7 @@ h5 {
 	left: 0;
 	bottom: 0;
 	/*padding-right: 20px;*/
-	padding-bottom: 30px;
+	padding-bottom: 55px;
 	padding-left: 15px;
 	width: 335px;
 }
